--- a/index.html
+++ b/index.html
@@ -394,12 +394,10 @@
     <div class="about-me-content">
       <div class="about-me-text">
         <p>
-          I am a passionate Neuroscience researcher driven by curiosity about how the brain heals and adapts. My scientific journey started in India and has taken me to Germany, where I am currently pursuing my PhD at Johannes Gutenberg University Mainz. My work focuses on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis.
-          <br><br>
-          Welcome to my personal website! I am a Neuroscience Researcher at the
+          Welcome to my personal website! I am a passionate Neuroscience researcher driven by curiosity about how the Central Nervous System(CNS) of our body heals and adapts. My scientific journey started in India and has taken me to Germany, where I am currently pursuing my PhD at
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, focusing on treatments for Multiple Sclerosis (MS) and Traumatic injuries (SCI, TBI) in collaboration with
+          </a>, on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis in collaboration
           <a href="https://lir-mainz.de/en/lir" target="_blank">
             Leibniz Institute for Resilience Research (LIR)
           </a> and the
@@ -408,8 +406,6 @@
           </a>, Germany.
           <br><br>
           Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. I believe that collaboration and open-mindedness are key to driving innovation in science and beyond.
-          <br><br>
-          Besides research, I enjoy cooking and traveling. Let's connect if you're interested in neurobiology, regenerative medicine, or brain repair!
           <br><br>
           If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
         </p>
