--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
           Welcome to my personal website! I am a passionate Neuroscience researcher driven by curiosity about how the Central Nervous System(CNS) of our body heals and adapts. My scientific journey started in India and has taken me to Germany, where I am currently pursuing my PhD at
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis in collaboration
+          </a>, focusing on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis, in collaboration
           <a href="https://lir-mainz.de/en/lir" target="_blank">
             Leibniz Institute for Resilience Research (LIR)
           </a> and the
