--- a/index.html
+++ b/index.html
@@ -394,10 +394,10 @@
     <div class="about-me-content">
       <div class="about-me-text">
         <p>
-          Welcome to my personal website! I am a passionate Neuroscience researcher driven by curiosity about how the Central Nervous System(CNS) of our body heals and adapts. My scientific journey started in India and has taken me to Germany, where I am currently pursuing my PhD at
+          I am a passionate neuroscience researcher driven by a deep curiosity about how the central nervous system (CNS) heals and adapts. My scientific journey began in India and has led me to Germany, where I am currently pursuing my PhD degree at
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
-          </a>, focusing on designing novel biomaterials for neural regeneration, aiming to develop new therapies for brain and spinal cord injuries, as well as neurodegenerative diseases like Multiple Sclerosis, in collaboration
+          </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
           <a href="https://lir-mainz.de/en/lir" target="_blank">
             Leibniz Institute for Resilience Research (LIR)
           </a> and the
