--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <div class="about-me-content">
       <div class="about-me-text">
         <p>
-          I am a passionate neuroscience researcher driven by a deep curiosity about how the central nervous system (CNS) heals and adapts. My scientific journey began in India and has led me to Germany, where I am currently pursuing my PhD degree at
+          Welcome to my personal website! I am a passionate neuroscience researcher driven by a deep curiosity about how the central nervous system (CNS) heals and adapts. My scientific journey began in India and has led me to Germany, where I am currently pursuing my PhD degree at
           <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
             Institute of Developmental Biology and Neurobiology (iDN)
           </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
