--- a/index.html
+++ b/index.html
@@ -79,33 +79,56 @@
       margin-bottom: 2.2rem;
       font-weight: 500;
     }
+    /* Social Links Styling */
     .social-links {
       display: flex;
       gap: 1.2rem;
       margin-top: 1.5rem;
+      flex-wrap: wrap;
     }
     .social-links a {
-      display: inline-block;
-      width: 42px;
-      height: 42px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 46px;
+      height: 46px;
+      background: #fff;
       border-radius: 50%;
-      background: #1e293b;
-      overflow: hidden;
-      transition: box-shadow 0.3s, transform 0.3s;
+      box-shadow: 0 2px 10px rgba(30,41,59,0.13);
+      transition: box-shadow 0.3s, transform 0.3s, background 0.2s;
+      border: 2px solid #e2e8f0;
+      position: relative;
     }
     .social-links a img {
-      width: 100%;
-      height: 100%;
+      width: 28px;
+      height: 28px;
       object-fit: contain;
       border-radius: 50%;
-      padding: 6px;
-      background: #1e293b;
       transition: transform 0.3s;
+      background: transparent;
+      padding: 0;
+      display: block;
+    }
+    .social-links a:hover {
+      background: #38bdf8;
+      box-shadow: 0 4px 16px rgba(56,189,248,0.23);
+      transform: translateY(-4px) scale(1.08);
+      border-color: #38bdf8;
     }
     .social-links a:hover img {
-      transform: scale(1.12);
-      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
+      transform: scale(1.15);
     }
+    /* Add colored ring for each brand */
+    .social-links a.facebook { border-color: #1877f3; }
+    .social-links a.facebook:hover { background: #1877f3; }
+    .social-links a.instagram { border-color: #e1306c; }
+    .social-links a.instagram:hover { background: #e1306c; }
+    .social-links a.linkedin { border-color: #0a66c2; }
+    .social-links a.linkedin:hover { background: #0a66c2; }
+    .social-links a.twitter { border-color: #14171a; }
+    .social-links a.twitter:hover { background: #14171a; }
+    .social-links a.gmail { border-color: #ea4335; }
+    .social-links a.gmail:hover { background: #ea4335; }
     /* About Section */
     .about-section {
       padding: 5rem 2rem 3rem 2rem;
@@ -317,6 +340,10 @@
       nav ul li { font-size: 0.95rem; }
       .card, .carousel-item { padding: 0.8rem; }
       .carousel-button { width: 32px; height: 32px; font-size: 1.5rem; }
+      .hero-text-side { padding: 1.2rem 0.3rem; }
+      .social-links { gap: 0.7rem; }
+      .social-links a { width: 36px; height: 36px; }
+      .social-links a img { width: 20px; height: 20px; }
     }
   </style>
 </head>
@@ -338,19 +365,19 @@
       <h1>I'm Arupam Biswas.</h1>
       <div class="subtitle">Neuroscientist &amp; Biomaterials Researcher</div>
       <div class="social-links">
-        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
         </a>
-        <a href="https://www.instagram.com/arupambiswas/" target="_blank">
+        <a href="https://www.instagram.com/arupambiswas/" target="_blank" class="instagram">
           <img src="InstagramF.jpg" alt="Instagram Logo">
         </a>
-        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank">
+        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank" class="linkedin">
           <img src="linkedIn.jpg" alt="LinkedIn Logo">
         </a>
-        <a href="https://x.com/arupamb07" target="_blank">
+        <a href="https://x.com/arupamb07" target="_blank" class="twitter">
           <img src="twitterFL.jpg" alt="X Logo">
         </a>
-        <a href="mailto:arupambiswas007@gmail.com" target="_blank">
+        <a href="mailto:arupambiswas007@gmail.com" target="_blank" class="gmail">
           <img src="gmail.jpg" alt="Gmail Logo">
         </a>
       </div>
