--- a/index.html
+++ b/index.html
@@ -362,8 +362,21 @@
   <section class="hero-split" id="home">
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
-      <h1>I'm Arupam Biswas.</h1>
-      <div class="subtitle">Neuroscientist &amp; Biomaterials Researcher</div>
+      <h1>Welcome to my personal website!</h1>
+      <div class="subtitle">I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+      <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+        Institute of Developmental Biology and Neurobiology (iDN)
+      </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
+      <a href="https://lir-mainz.de/en/lir" target="_blank">
+        Leibniz Institute for Resilience Research (LIR)
+      </a> and the
+      <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+        Max Planck Institute for Polymer Research (MPI-P)
+      </a>, Germany.
+      <br><br>
+      Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
+      <br><br>
+      If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!</div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
@@ -384,25 +397,6 @@
     </div>
   </section>
   <!-- About Me Section -->
-  <section class="about-section" id="about-me">
-    <h2>About Me</h2>
-    <div class="about-text">
-      Welcome to my personal website! I am a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
-      <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-        Institute of Developmental Biology and Neurobiology (iDN)
-      </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
-      <a href="https://lir-mainz.de/en/lir" target="_blank">
-        Leibniz Institute for Resilience Research (LIR)
-      </a> and the
-      <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-        Max Planck Institute for Polymer Research (MPI-P)
-      </a>, Germany.
-      <br><br>
-      Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-      <br><br>
-      If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
-    </div>
-  </section>
   <!-- Education Section -->
   <section id="education" class="education-section">
     <h2>Education</h2>
