--- a/index.html
+++ b/index.html
@@ -79,6 +79,22 @@
       margin-bottom: 2.2rem;
       font-weight: 500;
     }
+    /* White Hero Description */
+    .hero-desc {
+      color: #fff;
+      font-size: 1.1rem;
+      margin-bottom: 2.4rem;
+      line-height: 1.7;
+      text-align: left;
+      max-width: 640px;
+    }
+    .hero-desc a {
+      color: #38bdf8;
+      text-decoration: none;
+    }
+    .hero-desc a:hover {
+      text-decoration: underline;
+    }
     /* Social Links Styling */
     .social-links {
       display: flex;
@@ -90,20 +106,21 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 46px;
-      height: 46px;
+      width: 44px;
+      height: 44px;
       background: #fff;
-      border-radius: 50%;
+      border-radius: 8px;
       box-shadow: 0 2px 10px rgba(30,41,59,0.13);
       transition: box-shadow 0.3s, transform 0.3s, background 0.2s;
       border: 2px solid #e2e8f0;
       position: relative;
+      padding: 0;
     }
     .social-links a img {
-      width: 28px;
-      height: 28px;
+      width: 26px;
+      height: 26px;
       object-fit: contain;
-      border-radius: 50%;
+      border-radius: 4px;
       transition: transform 0.3s;
       background: transparent;
       padding: 0;
@@ -118,7 +135,6 @@
     .social-links a:hover img {
       transform: scale(1.15);
     }
-    /* Add colored ring for each brand */
     .social-links a.facebook { border-color: #1877f3; }
     .social-links a.facebook:hover { background: #1877f3; }
     .social-links a.instagram { border-color: #e1306c; }
@@ -129,35 +145,7 @@
     .social-links a.twitter:hover { background: #14171a; }
     .social-links a.gmail { border-color: #ea4335; }
     .social-links a.gmail:hover { background: #ea4335; }
-    /* About Section */
-    .about-section {
-      padding: 5rem 2rem 3rem 2rem;
-      background: linear-gradient(to right, #0f172a, #1e293b);
-      color: #f8f9fa;
-      text-align: center;
-    }
-    .about-section h2 {
-      font-size: 2.5rem;
-      margin-bottom: 1.5rem;
-      color: #38bdf8;
-      font-weight: 700;
-    }
-    .about-section .about-text {
-      max-width: 850px;
-      margin: 0 auto;
-      font-size: 1.2rem;
-      color: #e2e8f0;
-      text-align: center;
-      line-height: 2;
-    }
-    .about-section .about-text a {
-      color: #38bdf8;
-      text-decoration: none;
-    }
-    .about-section .about-text a:hover {
-      text-decoration: underline;
-    }
-    /* Education Section */
+    /* Education, Research, Footer, etc. (unchanged) */
     .education-section {
       padding: 4rem 2rem;
       background: linear-gradient(to right, #e0f2fe, #f8fafc);
@@ -218,7 +206,6 @@
     .edu-link:hover {
       text-decoration: none;
     }
-    /* Research Section */
     .research-section {
       padding: 4rem 2rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
@@ -292,7 +279,6 @@
     .carousel-button:hover {
       background: rgba(0, 0, 0, 0.8);
     }
-    /* Get in Touch Section */
     .get-in-touch {
       padding: 5rem 2rem;
       background: #0f172a;
@@ -333,6 +319,7 @@
         text-align: center;
       }
       .hero-text-side h1 { font-size: 2rem; }
+      .hero-desc { text-align: center; }
     }
     @media (max-width: 600px) {
       .about-section h2, .education-section h2, .research-section h2, .get-in-touch h2 { font-size: 1.4rem; }
@@ -362,20 +349,22 @@
     <div class="hero-img-side"></div>
     <div class="hero-text-side">
       <h1>Welcome to my personal website!</h1>
-      <div class="subtitle">I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
-      <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
-        Institute of Developmental Biology and Neurobiology (iDN)
-      </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
-      <a href="https://lir-mainz.de/en/lir" target="_blank">
-        Leibniz Institute for Resilience Research (LIR)
-      </a> and the
-      <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
-        Max Planck Institute for Polymer Research (MPI-P)
-      </a>, Germany.
-      <br><br>
-      Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
-      <br><br>
-      If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!</div>
+      <div class="hero-desc">
+        I'm Arupam Biswas, a passionate neuroscience researcher driven by curiosity about how the central nervous system heals and adapts. My journey began in India and led me to Germany, where I am pursuing a PhD at
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>. My work focuses on developing biomaterials for neural regeneration, in collaboration with the
+        <a href="https://lir-mainz.de/en/lir" target="_blank">
+          Leibniz Institute for Resilience Research (LIR)
+        </a> and the
+        <a href="https://www.mpip-mainz.mpg.de/en/home" target="_blank">
+          Max Planck Institute for Polymer Research (MPI-P)
+        </a>, Germany.
+        <br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to driving innovation in science and beyond.
+        <br><br>
+        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+      </div>
       <div class="social-links">
         <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
           <img src="facebookff.jpg" alt="Facebook Logo">
@@ -395,7 +384,6 @@
       </div>
     </div>
   </section>
-  <!-- About Me Section -->
   <!-- Education Section -->
   <section id="education" class="education-section">
     <h2>Education</h2>
